src/ts/tests/fixtures/invalid_service_initializer/non_void_httpres_rt.ts
// @ts-nocheck
// InvalidServiceInitializer
@Service
export class FooService {
  async init(): Promise<HttpResult<number>> {}
}
